# adam

./: .dockerignore  .gitignore  Dockerfile  README.md  ldap.sh  pyproject.toml  run_ad_service.py
adam/: .env_example  alembic.ini  config.py  gunicorn.conf.py  main.py
adam/api/: __init__.py  auth.py  health.py
adam/api/v1/: __init__.py  ldap.py  user.py
adam/migrations/: env.py
adam/migrations/versions/: 2025_04_20_1014-645de8d15833_initial_migration.py
adam/models/: database.py  ldap_accounts.py  users.py
adam/schemas/: __init__.py  ldap.py  user.py
adam/services/: ad_service.py  ad_service.test.py  db_service.py  encryption.py  logging_config.py  restrict_access.py  sso_service.py  utils.py
adam/static/css/: cover.css
adam/templates/: base.html  features.html  header.html  index.html  login.html
adam/web/: __init__.py  health.py  home.py
