[project]
name = "adam"
version = "0.1.0"
description = ""
authors = [
    {name = "d"}
]
readme = "README.md"

requires-python = ">=3.12"

dependencies = [
    "uvicorn[stantard] (>=0.34.0,<0.35.0)",
    "pydantic[email] (>=2.10.6,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "sqlalchemy (>=2.0.38,<3.0.0)",
    "cryptography (>=44.0.2,<45.0.0)",
    "fastapi (>=0.115.11,<0.116.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "python-decouple (>=3.8,<4.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "python-ldap (>=3.4.4,<4.0.0)",
    "oauthlib (>=3.2.2,<4.0.0)",
    "itsdangerous (>=2.2.0,<3.0.0)",
    "fastapi-sso (>=0.17.0,<0.18.0)",
    "aiosqlite (>=0.21.0,<0.22.0)",
    "greenlet (>=3.1.1,<4.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

